updated app.rb & layout.erb

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Sinatra + Twitter Bootstrap</title>
+		<title>ChurchFunds</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- Bootstrap -->
 		<link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,8 +27,9 @@
 			  <div class="navbar-collapse collapse">
 			    <ul class="nav navbar-nav">
 			      <li><a href="/">Home</a></li>
-			      <li><a href="/Add">Add</a></li>
-			      <li><a href="/contacts">Contacts</a></li>
+			      <li><a href="/add">Add</a></li>
+			      <li><a href="/results">Show Results</a></li>
+			      <!--<li><a href="/contacts">Contacts</a></li> -->
 			    </ul>
 			  </div><!--/.nav-collapse -->
 			</nav>
